--- a/test.html
+++ b/test.html
@@ -92,7 +92,7 @@
           "
         >
           categories
-          <!-- Chevron  Icon -->
+          <!-- Chevron Icon -->
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="h-4 w-4 ml-3"
@@ -176,7 +176,7 @@
             />
           </svg>
 
-          <!-- cart icon -->
+          <!-- Cart Icon -->
 
           <a href="/cart.html">
             <div
@@ -257,44 +257,36 @@
           <!-- Jdenticon icon -->
           <svg
             class="rounded h-12 w-12 duration-500 transform hover:scale-105"
-            data-jdenticon-value="Michael M"
+            data-jdenticon-value="Jessy"
           ></svg>
         </div>
       </div>
 
-      <div class="main h-screen flex border-t-2 border-blue-700">
-        <!-- Sidebar -->
+      <div class="main h-screen flex">
         <div
           class="
-            main-sidebar
             hidden
             md:block
-            border-r-2 border-blue-700
+            border-t-2 border-gray-700
+            main-sidebar
             w-1/5
-            bg-black
+            bg-gray-900
             p-6
           "
         >
-          <!-- categories -->
           <div class="sidebar-categories">
-            <!-- Categories -->
             <div
               class="
                 sidebar-main-category
-                text-blue-300
+                text-yellow-500
                 cursor-pointer
                 flex
                 font-bold
-                mb-4
                 p-2
-                bg-blue-500 bg-opacity-40
+                bg-gray-700
                 rounded-lg
-                duration-500
-                transform
-                hover:scale-105
               "
             >
-              <!-- grid svg icon -->
               <span class="w-8">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -313,129 +305,96 @@
               </span>
               <span>Categories</span>
             </div>
-
-            <!-- Echo and Alexa -->
             <div
               class="
                 sidebar-main-category
-                text-blue-500
+                text-white
                 cursor-pointer
                 flex
                 font-bold
                 p-2
-                duration-500
-                transform
-                hover:scale-105
               "
             >
               <span class="w-8"></span>
               <span>Echo and Alexa</span>
             </div>
-
-            <!-- Kindle -->
             <div
               class="
                 sidebar-main-category
-                text-blue-500
+                text-white
                 cursor-pointer
                 flex
                 font-bold
                 p-2
-                duration-500
-                transform
-                hover:scale-105
               "
             >
               <span class="w-8"></span>
               <span>Kindle</span>
             </div>
-
-            <!-- Books -->
             <div
               class="
                 sidebar-main-category
-                text-blue-500
+                text-white
                 cursor-pointer
                 flex
                 font-bold
                 p-2
-                duration-500
-                transform
-                hover:scale-105
               "
             >
               <span class="w-8"></span>
               <span>Books</span>
             </div>
-
-            <!-- Electronics -->
             <div
               class="
                 sidebar-main-category
-                text-blue-500
+                text-white
                 cursor-pointer
                 flex
                 font-bold
                 p-2
-                duration-500
-                transform
-                hover:scale-105
+                mb-2
               "
             >
               <span class="w-8"></span>
               <span>Electronics</span>
             </div>
-
-            <!-- Home and Garden -->
             <div
               class="
                 sidebar-main-category
-                text-blue-500
+                text-white
                 cursor-pointer
                 flex
                 font-bold
                 p-2
-                duration-500
-                transform
-                hover:scale-105
               "
             >
               <span class="w-8"></span>
-              <span>Home & Garden</span>
+              <span>Home and Garden</span>
             </div>
-
-            <!-- Fashion -->
             <div
               class="
                 sidebar-main-category
-                text-blue-500
+                text-white
                 cursor-pointer
                 flex
                 font-bold
                 p-2
-                duration-500
-                transform
-                hover:scale-105
               "
             >
               <span class="w-8"></span>
               <span>Fashion</span>
             </div>
-
-            <!-- Sell on Amazon -->
             <div
               class="
                 sidebar-main-category
-                text-blue-500
+                text-white
                 cursor-pointer
                 flex
                 font-bold
                 p-2
                 hover:bg-gray-700
                 rounded-xl
-                duration-500
-                transform
-                hover:scale-105
+                mb-4
               "
             >
               <span class="w-8">
@@ -443,21 +402,16 @@
               </span>
               <span>Sell on Amazon</span>
             </div>
-
-            <!-- Help -->
             <div
               class="
                 sidebar-main-category
-                text-blue-500
+                text-white
                 cursor-pointer
                 flex
                 font-bold
                 p-2
                 hover:bg-gray-700
                 rounded-xl
-                duration-500
-                transform
-                hover:scale-105
               "
             >
               <span class="w-8">
@@ -469,7 +423,7 @@
         </div>
 
         <!-- main section -->
-        <div class="main-section flex-1 p-6 bg-gray-900">
+        <div class="main-section flex-1 p-6 bg-white">
           <!-- banner -->
           <h1 class="font-bold text-gray-400 text-3xl mb-6">Shopping Cart</h1>
           <div class="table-titles flex font-bold text-gray-400">
