--- a/cart.html
+++ b/cart.html
@@ -36,6 +36,9 @@
     <!-- header.js -->
     <script src="./header.js"></script>
 
+    <!-- NumeralsJS -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
+
     <!-- JDenticon -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
     <script
@@ -491,8 +494,11 @@
             <div class="total-cost mr-7">
               <h2 class="text-gray-400">Total Cost</h2>
               <div class="total-cost-number text-3xl font-bold text-gray-600">
-                $1,789.00
+                
               </div>
+
+
+              
             </div>
             <!-- button -->
             <div
