--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       </div>
     </div>
 
-    <div class="main h-full flex border-t-2 border-blue-700">
+    <div class="main h-screen flex border-t-2 border-blue-700">
       <!-- Sidebar -->
       <div
         class="
